--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
-# Eliminar la línea del dialecto para que Hibernate lo seleccione automáticamente
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+server.port=8080
+jwt.secret=45f6e1b1-4b7b-4b7b-8b1b-4b7b4b7b4b7b
+jwt.expiration=86400000
+
